fixed container and scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,6 @@ html {
 
 body {
   font-family: 'Figtree', sans-serif;
-  max-height: 100vh;
-  max-width: 100vw;
   font-weight: 100;
   font-size: small;
 }
@@ -22,7 +20,8 @@ footer {
 
 .navbar {
   position: fixed;
-  width: 100vw;
+  max-width: 100vw;
+  width: 100%;
   opacity: .97;
   background-color: #244259;
 }
@@ -64,19 +63,33 @@ footer {
   padding-left: 10px;
 }
 
+.offcanvas.show {
+  background-color: #bccdda;
+}
+
+.offcanvas.show .offcanvas-body {
+  padding-right: 60%;
+}
+
+.offcanvas.show .offcanvas-body a {
+  color:#244259;
+}
+
+.offcanvas.show .btn {
+  margin-top: 20px;
+  border: 1px solid #244259;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
   right: 15px;
-  position: absolute;
-  z-index: 1000;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   border: solid 3px transparent;
   position: absolute;
-  z-index: 1000;
 }
  
 /* Handle */
@@ -84,8 +97,6 @@ footer {
   background: #bccdda45; 
   border-radius: 3px;
   border: solid 3px transparent;
-  position: absolute;
-  z-index: 1000;
 }
 
 /* Handle on hover */
@@ -115,19 +126,12 @@ footer {
 .container {
   background-color: #244259;
   color: #bccdda;
-  min-width: 100vw !important;
-  height: 100vh;
   margin: 0px;
   padding: 0px;
   position: absolute;
   z-index: -1;
-}
-
-.content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow-x: clip;
+  height: 100vh;
+  max-width: 100vw;
 }
 
 .btn:focus {
@@ -150,4 +154,5 @@ footer {
 
 .section {
   margin: 75px 20%;
+  max-width: 100vw;
 }
